Closed
Bug 345538
Opened 19 years ago
Closed 19 years ago
Can no longer drag extensions or themes into Add-ons manager to install them
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.8.1beta2
People
(Reporter: ispiked, Assigned: mwu)
References
Details
(Keywords: fixed1.8.1, regression)
Attachments
(1 file)
1.18 KB,
patch
|
roc
:
review+
roc
:
superreview+
dbaron
:
approval1.8.1+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1b1) Gecko/20060720 BonEcho/2.0b1
Steps to reproduce:
1. Open up the Add-ons manager.
2. Try and drag a .jar file or .xpi from Nautilus into it.
Results:
Drag gets "cancelled" as well ask GTK errors showing up in the console:
(Gecko:12644): GLib-GObject-WARNING **: invalid (NULL) pointer instance
(Gecko:12644): GLib-GObject-CRITICAL **: g_signal_emit_by_name: assertion `G_TYPE_CHECK_INSTANCE (instance)' failed
Expected results:
I'm asked to install the extension or theme.
I'm not 100% sure that bug 307184 regressed this, but a build from before that patch landed works.
Assignee | ||
Comment 1•19 years ago
|
||
Drags started outside of mozilla return null from gtk_grab_get_current() and should not be canceled.
Attachment #230214 -
Flags: superreview?(roc)
Attachment #230214 -
Flags: review?(roc)
Reporter | ||
Comment 2•19 years ago
|
||
Roc, this patch fixes a regression from an earlier patch that Michael made. We need to get this reviewed and into the 1.8 branch so we don't regress there.
Attachment #230214 -
Flags: superreview?(roc)
Attachment #230214 -
Flags: superreview+
Attachment #230214 -
Flags: review?(roc)
Attachment #230214 -
Flags: review+
Updated•19 years ago
|
Whiteboard: [checkin needed]
Comment 3•19 years ago
|
||
mozilla/widget/src/gtk2/nsWindow.cpp 1.177
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed] → [need-a]
Target Milestone: --- → mozilla1.8.1beta2
Updated•19 years ago
|
Flags: blocking1.8.1?
Reporter | ||
Comment 4•19 years ago
|
||
Verified FIXED using Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060725 Minefield/3.0a1.
I am successfully able to drag things (including extensions and themes) onto the Add-ons manager and the content window and get no Glib errors.
Status: RESOLVED → VERIFIED
Updated•19 years ago
|
Flags: blocking1.8.1? → blocking1.8.1+
Assignee | ||
Updated•19 years ago
|
Attachment #230214 -
Flags: approval1.8.1?
Comment on attachment 230214 [details] [diff] [review]
Fix drags started outside of mozilla
a=dbaron on behalf of drivers. Please check in to MOZILLA_1_8_BRANCH and mark fixed1.8.1 once you have done so.
Attachment #230214 -
Flags: approval1.8.1? → approval1.8.1+
Assignee | ||
Updated•19 years ago
|
Whiteboard: [need-a] → [checkin needed (1.8 branch)]
Comment 6•19 years ago
|
||
mozilla/widget/src/gtk2/nsWindow.cpp 1.145.2.6
Keywords: fixed1.8.1
Whiteboard: [checkin needed (1.8 branch)]
You need to log in
before you can comment on or make changes to this bug.
Description
•