Bug 345538: Can no longer drag extensions or themes into Add-ons manager to install them (drags from outside Mozilla don't work), patch by Michael Wu <michael.wu@mozilla.com>, r+sr=roc